assets/css/main.css
/* GENERAL STYLING */

/* hide and display content */
.toggle-content {
	display: none;
}

.toggle-content.is-visible {
	display: block;
}

/* MAIN NAVIGATION */
.main-header 
{
    background-color: #ffffff;
}

/* DASHBOARD */
.bg-aldea 
{
    background-color: #f1c40f !important;
}

.info-box-aldea a 
{
    color: #1b1b1b;
}

/* SIDEBAR */
.main-sidebar
{
    background-color: #1b1b1b;
    padding-top: 80px;
}

.sidebar-menu li > a 
{
    color: #f1c40f;
}

.user-panel > .info > p {
    color: #f1c40f;
}

.sidebar-toggle 
{
    color: #000000;
}

.sidebar-toggle:hover
{
    color: #000000;
}

/* session data*/
.sidebar-menu>li>span 
{
    padding: 12px 5px 12px 15px;
    display: block;
    color: #ffffff;
}

.sidebar hr
{
    margin-left: 5px;
    margin-right: 5px;
}

.sidebar-menu>li>span.session-name 
{
    padding: 0px 5px 0px 15px;
    display: block;
    color: #ffffff;
}
/* SETTINGS PAGE */
#settings-page h3 a 
{
    color: #000000;
}

#settings-page h3 a:hover 
{
    text-decoration: underline;
}

/* LOGIN PAGE */

/*logo*/
.login-logo, 
.register-logo {
    margin-bottom: 0px;
}

.login-page {
    background: url(../img/login-bg.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}


/* PROJECTS & SUBPROJECTS PAGE */
.view-projects .box,
.view-subprojects .box {
    margin-top: 20px;
}


/* Parsely Validation Styling*/
.parsley-errors-list {
    
}


/* Risk Registry */
/*Table*/
.scrollable {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: auto;
}

/*Buttons*/
.reg-btn {
    margin-bottom: 10px;
}

.btn-reg,
.btn-add,
.btn-view,
.btn-filter,
.btn-report {
    background-color: #f1c40f;
    border-color: #f1c40f;
    color: #1b1b1b;
}

.btn-reg:hover,
.btn-add:hover,
.btn-view:hover,
.btn-report:hover,
.btn-filter:hover {
    background-color: #f1c40f;
    border-color: #f1c40f;
    color: #1b1b1b;
}

#add-description,
#clear-description
{
    margin-top: 25px;
    background-color: #f1c40f;
    border-color: #f1c40f;
    color: #1b1b1b;
    font-size: 10px;
}


/* Aldea Alerts */
.alert-aldea,
.alert-warning {
    background-color: #f1c40f !important;
    color: #1b1b1b !important;
    border-color: #f1c40f;
}

/* Callouts */
.bs-callout-info {
    border-left-color: #f1c40f !important;

}
.bs-callout-info h4 {
    color: #1b1b1b !important;
}


/*Font Awesome Icons*/
.fa-icon {
    color: #f1c40f !important;
}

/* SETTINGS PAGE */
.panel-body h3 {
    margin-top: 0px;
}

/* FORMS */
.form-group .alert {
    margin-top: 8px;
    padding: 5px;
}

/*DATE PICKER*/
.datepicker-dropdown {
    background-color: #f1c40f;
}

/* BOXES */
.box.box-yellow {
    border-top-color: #f39c12 !important;
}

/* Risk Box Sections*/
.box-identification {
    background-color: #a8e2dc;
}

.box-pre-mitigated {
    background-color: #c7effb;
}

.box-current-risks {
    background-color: #B3D7E1;
}

.box-targeted-risks {
    background-color: #9FBFC8;
}

.box-responses {
    background-color: #FBE8B9;
}

.box-residual-risk {
    background-color: #D8E8F1;
}

.box-controlling {
    background-color: #FCEBCF;
}
/* CALL OUTS */
.bs-callout {
    padding: 20px;
    margin: 20px 0;
    border: 1px solid #eee;
    border-left-width: 5px;
    border-radius: 3px;
    background-color: #ffffff;
}
.bs-callout h4 {
    margin-top: 0;
    margin-bottom: 5px;
}
.bs-callout p:last-child {
    margin-bottom: 0;
}
.bs-callout code {
    border-radius: 3px;
}
.bs-callout+.bs-callout {
    margin-top: -5px;
}
.bs-callout-default {
    border-left-color: #777;
}
.bs-callout-default h4 {
    color: #777;
}
.bs-callout-primary {
    border-left-color: #428bca;
}
.bs-callout-primary h4 {
    color: #428bca;
}
.bs-callout-success {
    border-left-color: #5cb85c;
}
.bs-callout-success h4 {
    color: #5cb85c;
}
.bs-callout-danger {
    border-left-color: #d9534f;
}
.bs-callout-danger h4 {
    color: #d9534f;
}
.bs-callout-warning {
    border-left-color: #f0ad4e;
}
.bs-callout-warning h4 {
    color: #f0ad4e;
}
.bs-callout-info {
    border-left-color: #5bc0de;
}
.bs-callout-info h4 {
    color: #5bc0de;
}

/*Alerts*/
.alert-info
{
    position: relative;
    color: #032f62 !important;
    background-color: #dbedff !important;
    border: 1px solid rgba(27, 31, 35, 0.15);
    border-radius: 3px;
}

.alert-danger
{
    color: #86181d !important;
    background-color: #ffdce0 !important;
    border-color: rgba(27, 31, 35, 0.15);
}

/*Labels*/
.project-settings-label
{
    margin-right: 10px;
}

/*Tables*/
#project-settings-tbl_wrapper
{
    margin-top: 20px;
}

/* Media Query */
@media all and (max-width: 699px) and (min-width: 520px), (min-width: 1151px)
{
  .sidebar-toggle 
  {
    display: none;
  }
}

